# jd-launcher

./: .gitignore  README.md  components.json  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: helper.rs  java_manager.rs  lib.rs  main.rs  microsoft_auth.rs  modloaders.rs  modpacks.rs  mojang_api.rs  profiles.rs
src/components/: ConsoleDrawer.tsx  InstanceCard.tsx  InstanceRow.tsx  InstanceViewPage.tsx  ModpackBrowser.tsx  ModrinthBrowsePage.tsx  ProfileModal.tsx  SettingsPage.tsx  WelcomeScreen.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  select.tsx  sidebar.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/lib/: themes.ts
